Bug 272774 - Network manager widget text is out of bounds
Summary: Network manager widget text is out of bounds
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 267601 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-08 14:22 UTC by Krasnikov Nikolay
Modified: 2011-05-26 23:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
how it looks now (77.56 KB, image/png)
2011-05-08 14:22 UTC, Krasnikov Nikolay
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Krasnikov Nikolay 2011-05-08 14:22:39 UTC
Created attachment 59768 [details]
how it looks now

Version:           4.6 (using KDE 4.6.2) 
OS:                Linux

When I try to show my network interfaces by their manifacturer,their description is overly long and the text spreads to the neighbouring windows.

Reproducible: Always

Steps to Reproduce:
1) Click on the network manager widget.
2) Click 'change connections' button on the right (I do not use english localisation, so the name might be different)
3) Choose other
4) Sort interfaces by manifacturer

Actual Results:  
Interfaces' descriptions do not fit their respected window.

Expected Results:  
They should fit the window one way or the other. Either the window should match the information contained in it, or the descripion should wrap.

There is also a usability problem if you have several devices that can be connected to a single network and you sort the interfaces by their description. Their name would be essentially the same - 'Wireless Network Interface', whick leads to confusion as to which one is being currently used.

For now, I'm stuck with showing network interfaces by the system name. 'wlan0'/'wlan1' is short and distinct enough.
Comment 1 Lamarque V. Souza 2011-05-08 19:50:31 UTC
Git commit 48c1c33f6713f910481d28cdf541fefcd2c5b6cb by Lamarque V. Souza.
Committed on 08/05/2011 at 20:01.
Pushed by lvsouza into branch 'master'.

Wrap interface label in InterfaceItem class, now only the first line is
displayed.

BUG: 272774

M  +2    -1    applet/interfaceitem.cpp     

http://commits.kde.org/networkmanagement/48c1c33f6713f910481d28cdf541fefcd2c5b6cb
Comment 2 Lamarque V. Souza 2011-05-08 19:50:31 UTC
Git commit fcb65711b92905ab006b2f716b862091f401a6f0 by Lamarque V. Souza.
Committed on 08/05/2011 at 20:01.
Pushed by lvsouza into branch 'nm09'.

Wrap interface label in InterfaceItem class, now only the first line is
displayed.

BUG: 272774
(cherry picked from commit 48c1c33f6713f910481d28cdf541fefcd2c5b6cb)

M  +2    -1    applet/interfaceitem.cpp     

http://commits.kde.org/networkmanagement/fcb65711b92905ab006b2f716b862091f401a6f0
Comment 3 Lamarque V. Souza 2011-05-09 06:18:56 UTC
*** Bug 267601 has been marked as a duplicate of this bug. ***
Comment 4 Will Stephenson 2011-05-26 23:50:46 UTC
Git commit acfa7abf11a9f11dfae64e46d57e04e12b30241b by Will Stephenson, on behalf of Lamarque V. Souza.
Committed on 08/05/2011 at 20:01.
Pushed by wstephens into branch 'libnm-qt'.

Wrap interface label in InterfaceItem class, now only the first line is
displayed.

BUG: 272774
(cherry picked from commit 48c1c33f6713f910481d28cdf541fefcd2c5b6cb)

M  +2    -1    applet/interfaceitem.cpp     

http://commits.kde.org/networkmanagement/acfa7abf11a9f11dfae64e46d57e04e12b30241b