Wrap interface label in InterfaceItem class, now only the first line is displayed.

BUG: 272774
(cherry picked from commit 48c1c33f6713f910481d28cdf541fefcd2c5b6cb)